--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-aiogram~=2.12
-environs~=8.0.0
-asyncpg~=0.22.0
-beautifulsoup4~=4.9.3
-requests~=2.25.1
+aiogram==2.15
+aiohttp==3.7.4.post0
+APScheduler==3.8.0
+async-timeout==3.0.1
+asyncpg==0.22.0
+attrs==21.2.0
+Babel==2.9.1
+certifi==2021.5.30
+chardet==4.0.0
+environs==8.0.0
+idna==2.10
+marshmallow==3.13.0
+multidict==5.1.0
+python-dotenv==0.19.0
+pytz==2021.3
+requests==2.25.1
+six==1.16.0
+typing-extensions==3.10.0.2
+tzlocal==2.1
+urllib3==1.26.7
+yarl==1.6.3
